--- a/docker-compose-localstack.yml
+++ b/docker-compose-localstack.yml
@@ -6,13 +6,15 @@ services:
     ports:
       - '4566:4566' # Default port for LocalStack
     environment:
-      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_DEFAULT_REGION=eu-central-2
       - EDGE_PORT=4566
-      - SERVICES=dynamodb,lambda
+      - SERVICES=dynamodb,lambda,apigateway
       - DEBUG=1 # Enable debugging output
       - KINESIS_PROVIDER=kinesalite
       - LAMBDA_LIMITS_CODE_SIZE_ZIPPED=524288000
       - LAMBDA_LIMITS_CREATE_FUNCTION_REQUEST_SIZE=524288000
+      - LAMBDA_DOCKER_NETWORK=backend
+
     volumes:
       - './:/etc/localstack/init/ready.d/' # Mount your project directory to automatically run scripts
       - '/var/run/docker.sock:/var/run/docker.sock' # Mount the Docker socket to allow LocalStack to manage Docker containers
