--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>This service handles User Authentication and Profile Management</description>
 	<properties>
 		<java.version>17</java.version>
+		<finalName>${project.artifactId}</finalName>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -111,6 +112,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${finalName}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
