--- a/.github/workflows/deploy-to-lambda.yml
+++ b/.github/workflows/deploy-to-lambda.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS Lambda
 on:
   push:
     branches:
-      - main  # Adjust as needed
+      - main
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '17'  # or any other version you are using
+          java-version: '17'
           distribution: 'zulu'
 
       - name: Setup AWS CLI
@@ -24,18 +24,30 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1 # Modify this to your desired AWS region
+          aws-region: eu-central-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build with Maven
         run: mvn -B package -DfinalName=usermanager --file pom.xml
 
-      - name: Deploy to AWS Lambda
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: nexusnet-usermanager
         run: |
-          # Constants
-          S3_BUCKET=nexusnet-user-manager
-          S3_KEY=usermanager.jar
-          LAMBDA_FUNCTION_NAME=nexusnet-user-manager
-          # Upload the updated jar to S3
-          aws s3 cp target/usermanager.jar s3://$S3_BUCKET/$S3_KEY
-          # Assuming your JAR file is in the target directory
-          aws lambda update-function-code  --function-name $LAMBDA_FUNCTION_NAME --s3-bucket $S3_BUCKET --s3-key $S3_KEY
+          docker build -t $REGISTRY/$REPOSITORY:latest .
+          docker push $REGISTRY/$REPOSITORY:latest
+
+      - name: Update Lambda function with latest ECR image
+        env:
+          LAMBDA_NAME: nexusnet-usermanager-ecr
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: nexusnet-usermanager
+          IMAGE_TAG: latest
+        run: |
+          aws lambda update-function-code \
+          --function-name $LAMBDA_NAME \
+          --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
