--- a/src/main/resources/user.yaml
+++ b/src/main/resources/user.yaml
@@ -317,6 +317,22 @@ paths:
         '404':
           description: User not found
 
+  /users/follows:
+    get:
+      summary: Get all follow connections
+      operationId: getAllFollows
+      responses:
+        '200':
+          description: List of user follows
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/UserSummary'
+
 
 components:
   schemas:
