SCRUM-7: adds profile privacy setting

--- a/src/main/resources/user.yaml
+++ b/src/main/resources/user.yaml
@@ -244,6 +244,8 @@ components:
         birthday:
           type: string
           format: date
+        privateProfile:
+          type: boolean
 
     UpdateUser:
       type: object
@@ -263,3 +265,5 @@ components:
         birthday:
           type: string
           format: date
+        privateProfile:
+          type: boolean
