almost working terraform

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-amazon.dynamodb.endpoint=http://localstack:4566/
-amazon.s3.endpoint=http://localstack:4566/
-amazon.aws.accesskey=key
-amazon.aws.secretkey=key2
-amazon.aws.s3.accesskey=test
-amazon.aws.s3.secretkey=test
-usermanager.aws.s3.bucket=nexus-net-user-info-bucket
+# amazon.dynamodb.endpoint=http://localstack:4566/
+# amazon.s3.endpoint=http://localstack:4566/
+# amazon.aws.accesskey=key
+# amazon.aws.secretkey=key2
+# amazon.aws.s3.accesskey=test
+# amazon.aws.s3.secretkey=test
+# usermanager.aws.s3.bucket=nexus-net-user-info-bucket
 spring.servlet.multipart.enabled=true
+amazon.dynamodb.endpoint="${AMAZON_DYNAMODB_ENDPOINT}"
+amazon.s3.endpoint=${AMAZON_S3_ENDPOINT}
+amazon.aws.accesskey=${AMAZON_ACCESS_KEY}
+amazon.aws.secretkey=${AMAZON_SECRET_KEY}
+amazon.aws.s3.accesskey=${AMAZON_S3_ACCESS_KEY}
+amazon.aws.s3.secretkey=${AMAZON_S3_SECRET_KEY}
+usermanager.aws.s3.bucket=${AMAZON_USM_BUCKET}
