--- a/.github/workflows/deploy-to-lambda.yml
+++ b/.github/workflows/deploy-to-lambda.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -43,7 +43,7 @@ jobs:
 
       - name: Update Lambda function with latest ECR image
         env:
-          LAMBDA_NAME: nexusnet-usermanager-ecr
+          LAMBDA_NAME: usermanager_api_ecr
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: nexusnet-usermanager
           IMAGE_TAG: latest
