--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-amazon.dynamodb.endpoint=http://localstack:4566/
-amazon.s3.endpoint=http://localstack:4566/
+amazon.dynamodb.endpoint=http://localhost:4566/
+amazon.s3.endpoint=http://localhost:4566/
 amazon.aws.accesskey=key
 amazon.aws.secretkey=key2
 amazon.aws.s3.accesskey=test
